# Vision_Marker_theory

./: .gitignore  CMakeLists.txt  CameraCalibration  CircleBoard.cpp  CircleBoard.h  DebugServer.cpp  DebugServer.h  DetectMarker.h  Detect_Markers.cpp  Generate_Markers.cpp  Hackathlon schedule draft (2).xlsx  Hackathon November 2017 2.ppt  Open_debugstream.sh  README.md  V_PP.cpp  V_PP.h  base64.cpp  base64.h  calibrate_camera_charuco.cpp  cam.py  cam_main_latest.py  circle.py  clients.txt  constants.h  drone_calibration.txt  drone_calibration2.txt  general.cpp  general.h  getcam.m  in_VID5.xml  logging.cpp  logging.h  main.m  main2.m  mav.parm  path_planner.cpp  path_planner_v1d2.cpp  path_planning_test.cpp  viewdebug.py  webcam_test.cpp
Path_Planning/: path_planner.cpp  path_planner.h  trajectory.cpp  trajectory.h
Path_Planning/Mueller/: path_planner.cpp  path_planner.h
Path_Planning/Mueller/cvxgen/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  readme.txt  solver.c  solver.h  testsolver.c  util.c
Path_Planning/Mueller/cvxgen_no_constraints/: readme.txt  solver.c  solver.h  util.c
Path_Planning/Mueller/cvxgen_old/: Makefile  csolve.c  csolve.m  cvxsolve.m  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  util.c
Path_Planning/Mueller/cvxgen_test/: Makefile  csolve.c  csolve.m  cvxsolve.m  description.cvxgen  ldl.c  make_csolve.m  matrix_support.c  solver.c  solver.h  util.c
Path_Planning/Polynomial/: gettingPosDers.cpp  math_tools.cpp  path_planner.cpp  path_planner.h  posToStatePath.cpp  something.cpp
Path_Planning/some_old_stuff_i_will_update/: something.cpp
Vision/: CircleBoard.cpp  CircleBoard.h  DetectMarker.h  Detect_Markers.cpp  camera_calibration.cpp  laptop_calibration.txt  vision.h
cmake.modules/: AddGNUplot.txt  AddSPDlog.txt
lib/src/spdlog-stamp/: spdlog-download-RelWithDebInfo.cmake
lib/tmp/: spdlog-gitclone.cmake
